--- a/DoYouBelieve/client/main.html
+++ b/DoYouBelieve/client/main.html
@@ -8,6 +8,11 @@
       <div class="navbar-header">
         <a class="navbar-brand" href="/">Do You Believe</a>
       </div>
+      <div class="collapse navbar-collapse" id="navigation">
+        <ul class="nav navbar-nav navbar-right">
+          {{> loginButtons}}
+        </ul>
+      </div>
     </header>
     <div id="main">
       {{> statementsList}}
